--- a/Resources/Private/Language/locallang_BE_CE_static.xlf
+++ b/Resources/Private/Language/locallang_BE_CE_static.xlf
@@ -5,18 +5,31 @@
 		<body>
 
 
-			<!--bigIconTextButton Element-->
+			<!--BigIconTextButton Element-->
 			<trans-unit id="bigIconTextButton.title">
 				<source>Big icon,Text and Button</source>
 			</trans-unit>
 			<trans-unit id="bigIconTextButton.description">
 				<source>Big icon, header, text and button</source>
 			</trans-unit>
+
 			<trans-unit id="bigIconTextButton.buttonText">
 				<source>Button text</source>
 			</trans-unit>
 			<trans-unit id="bigIconTextButton.bodytext">
 				<source>Text</source>
+			</trans-unit>
+			<trans-unit id="bigIconTextButton.flexform.disableWholeAreaLink">
+				<source>Disable whole area link</source>
+			</trans-unit>
+			<trans-unit id="bigIconTextButton.flexform.btnAsLink">
+				<source>Show button as a link</source>
+			</trans-unit>
+			<trans-unit id="bigIconTextButton.flexform.icon">
+				<source>Icon</source>
+			</trans-unit>
+			<trans-unit id="bigIconTextButton.flexform.icon_none">
+				<source>None</source>
 			</trans-unit>
 
 
@@ -27,11 +40,24 @@
 			<trans-unit id="iconTextButton.description">
 				<source>Icon, header, text and button</source>
 			</trans-unit>
+
 			<trans-unit id="iconTextButton.buttonText">
 				<source>Button text</source>
 			</trans-unit>
 			<trans-unit id="iconTextButton.bodytext">
 				<source>Text</source>
+			</trans-unit>
+			<trans-unit id="iconTextButton.flexform.disableWholeAreaLink">
+				<source>Disable whole area link</source>
+			</trans-unit>
+			<trans-unit id="iconTextButton.flexform.btnAsLink">
+				<source>Show button as a link</source>
+			</trans-unit>
+			<trans-unit id="iconTextButton.flexform.icon">
+				<source>Icon</source>
+			</trans-unit>
+			<trans-unit id="iconTextButton.flexform.icon_none">
+				<source>None</source>
 			</trans-unit>
 
 
@@ -42,6 +68,7 @@
 			<trans-unit id="imageTextLink.description">
 				<source>Image or media, text and link. Will use image before media. Will only render one image or one media.</source>
 			</trans-unit>
+
 			<trans-unit id="imageTextLink.bodyText">
 				<source>Text</source>
 			</trans-unit>
@@ -50,6 +77,12 @@
 			</trans-unit>
 			<trans-unit id="imageTextLink.bodytext">
 				<source>Text</source>
+			</trans-unit>
+			<trans-unit id="imageTextLink.flexform.disableWholeAreaLink">
+				<source>Disable whole area link</source>
+			</trans-unit>
+			<trans-unit id="imageTextLink.flexform.linkAsBtn">
+				<source>Show link as a button</source>
 			</trans-unit>
 			<trans-unit id="imageTextLink.flexform.hoverEffect">
 				<source>Hover effects</source>
@@ -93,17 +126,22 @@
 			<trans-unit id="heroImage.description">
 				<source>Image, header, subheader, text and link. Will render only if image added</source>
 			</trans-unit>
+
 			<trans-unit id="heroImage.subheader">
 				<source>Sub Header</source>
 			</trans-unit>
 			<trans-unit id="heroImage.linkText">
 				<source>Link Text</source>
 			</trans-unit>
+
 			<trans-unit id="heroImage.flexform.elementText">
 				<source>Text</source>
 			</trans-unit>
 			<trans-unit id="heroImage.flexform.elementHeight">
 				<source>Set height of element</source>
+			</trans-unit>
+			<trans-unit id="heroImage.flexform.linkAsBtn">
+				<source>Show link as a button</source>
 			</trans-unit>
 			<trans-unit id="heroImage.flexform.transparentLayer">
 				<source>Element overlay color (rgba). Link to online generator: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Colors/Color_picker_tool</source>
@@ -162,6 +200,7 @@
 			<trans-unit id="quote.description">
 				<source>Quote with optional footer and link</source>
 			</trans-unit>
+
 			<trans-unit id="quote.linkText">
 				<source>Link text</source>
 			</trans-unit>
@@ -180,6 +219,7 @@
 			<trans-unit id="fullWidthImage.description">
 				<source>Full Width Image element</source>
 			</trans-unit>
+
 			<trans-unit id="fullWidthImage.tabs.image">
 				<source>Image</source>
 			</trans-unit>
@@ -195,6 +235,7 @@
 			<trans-unit id="socialIcons.description">
 				<source>Social Icons element</source>
 			</trans-unit>
+
 			<trans-unit id="socialIcons.flexform.facebookLink">
 				<source>Facebook: Pagelink</source>
 			</trans-unit>
@@ -234,6 +275,7 @@
 			<trans-unit id="contactsCard.description">
 				<source>Photo and contact information</source>
 			</trans-unit>
+
 			<trans-unit id="contactsCard.name">
 				<source>Full Name</source>
 			</trans-unit>
@@ -276,28 +318,30 @@
 			<trans-unit id="button.description">
 				<source>A button with twbs style</source>
 			</trans-unit>
+
 			<trans-unit id="button.header_label">
 				<source>Button text</source>
 			</trans-unit>
-			<trans-unit id="button.buttonStyle">
+
+			<trans-unit id="button.flexform.buttonStyle">
 				<source>Button Style</source>
 			</trans-unit>
-			<trans-unit id="button.buttonSize">
+			<trans-unit id="button.flexform.buttonSize">
 				<source>Button Size</source>
 			</trans-unit>
-			<trans-unit id="button.buttonSize_default">
+			<trans-unit id="button.flexform.buttonSize_default">
 				<source>Default</source>
 			</trans-unit>
-			<trans-unit id="button.buttonSize_large">
+			<trans-unit id="button.flexform.buttonSize_large">
 				<source>Large</source>
 			</trans-unit>
-			<trans-unit id="button.buttonSize_small">
+			<trans-unit id="button.flexform.buttonSize_small">
 				<source>Small</source>
 			</trans-unit>
-			<trans-unit id="button.buttonSize_extraSmall">
+			<trans-unit id="button.flexform.buttonSize_extraSmall">
 				<source>Extra small</source>
 			</trans-unit>
-			<trans-unit id="button.blockLevel">
+			<trans-unit id="button.flexform.blockLevel">
 				<source>Block level button</source>
 			</trans-unit>
 
