--- a/Resources/Private/Language/locallang_BE_CE_special.xlf
+++ b/Resources/Private/Language/locallang_BE_CE_special.xlf
@@ -13,83 +13,89 @@
 			</trans-unit>
 
 			<!--SiteHeader Element TCA Overrides-->
-			<trans-unit id="siteHeader.TCA.tab">
+			<trans-unit id="siteHeader.CType">
+				<source>Site Header | (Main header of the site. Will be copied to all subpages)</source>
+			</trans-unit>
+			<trans-unit id="siteHeader.tabs.settings">
 				<source>Site Header Settings </source>
 			</trans-unit>
-			<trans-unit id="siteHeader.TCA.CType">
-				<source>Site Header ||| (Main header of the site. Will be copied to all subpages)</source>
-			</trans-unit>
-			<trans-unit id="siteHeader.TCA.palette.headerTop">
+
+			<trans-unit id="siteHeader.palette.headerTop">
 				<source>Site Header Top</source>
 			</trans-unit>
-			<trans-unit id="siteHeader.TCA.palette.headerMiddle">
+			<trans-unit id="siteHeader.palette.headerMiddle">
 				<source>Site Header Middle</source>
 			</trans-unit>
-			<trans-unit id="siteHeader.TCA.palette.mainNavigation">
+			<trans-unit id="siteHeader.palette.mainNavigation">
 				<source>Main Navigation</source>
 			</trans-unit>
-			<trans-unit id="siteHeader.TCA.palette.accessibility">
+			<trans-unit id="siteHeader.palette.accessibility">
 				<source>Accessibility</source>
 			</trans-unit>
 
-
-			<trans-unit id="siteHeader.TCA.accessibility.skipLinks_mainNavigation">
-				<source>Accessibility SkipLinks - MainNavigation</source>
-			</trans-unit>
-			<trans-unit id="siteHeader.TCA.accessibility.skipLinks_mainContent">
-				<source>Accessibility SkipLinks MainContent</source>
-			</trans-unit>
-
-
-			<trans-unit id="siteHeader.TCA.headerTop">
+			<!--Site Header Top-->
+			<trans-unit id="siteHeader.showHeaderTop">
 				<source>Show Site Header Top section</source>
 			</trans-unit>
-			<trans-unit id="siteHeader.TCA.headerMiddle">
-				<source>Show Site Header Middle section</source>
-			</trans-unit>
-
-			<trans-unit id="siteHeader.TCA.headerTopContacts">
+			<trans-unit id="siteHeader.headerTopContacts">
 				<source>Show Site Header Top Contacts</source>
 			</trans-unit>
-			<trans-unit id="siteHeader.TCA.headerTopNavigation">
+			<trans-unit id="siteHeader.headerTopNavigation">
 				<source>Site Header Top Navigation</source>
 			</trans-unit>
-			<trans-unit id="siteHeader.TCA.headerTopLangMenu">
+			<trans-unit id="siteHeader.headerTopLangMenu">
 				<source>Site Header Top Language Menu</source>
 			</trans-unit>
-			<trans-unit id="siteHeader.TCA.headerTopSearch">
+			<trans-unit id="siteHeader.headerTopSearch">
 				<source>Site Header Top Search</source>
 			</trans-unit>
 
-
-
-			<trans-unit id="siteHeader.TCA.headerTopContacts.email_address">
+			<trans-unit id="siteHeader.headerTopContacts.email_address">
 				<source>Email address</source>
 			</trans-unit>
-			<trans-unit id="siteHeader.TCA.headerTopContacts.email_title">
+			<trans-unit id="siteHeader.headerTopContacts.email_title">
 				<source>Email title</source>
 			</trans-unit>
-			<trans-unit id="siteHeader.TCA.headerTopContacts.email_icon">
+			<trans-unit id="siteHeader.headerTopContacts.email_icon">
 				<source>Show Email icon</source>
 			</trans-unit>
-			<trans-unit id="siteHeader.TCA.headerTopContacts.email_show_title">
+			<trans-unit id="siteHeader.headerTopContacts.email_show_title">
 				<source>Show Email title</source>
 			</trans-unit>
 
-			<trans-unit id="siteHeader.TCA.headerTopContacts.phone_link">
+			<trans-unit id="siteHeader.headerTopContacts.phone_link">
 				<source>Phone number link</source>
 			</trans-unit>
-			<trans-unit id="siteHeader.TCA.headerTopContacts.phone_text">
+			<trans-unit id="siteHeader.headerTopContacts.phone_text">
 				<source>Phone number text</source>
 			</trans-unit>
-			<trans-unit id="siteHeader.TCA.headerTopContacts.phone_title">
+			<trans-unit id="siteHeader.headerTopContacts.phone_title">
 				<source>Phone number title</source>
 			</trans-unit>
-			<trans-unit id="siteHeader.TCA.headerTopContacts.phone_icon">
+			<trans-unit id="siteHeader.headerTopContacts.phone_icon">
 				<source>Show Phone icon</source>
 			</trans-unit>
-			<trans-unit id="siteHeader.TCA.headerTopContacts.phone_show_title">
+			<trans-unit id="siteHeader.headerTopContacts.phone_show_title">
 				<source>Show Phone title</source>
+			</trans-unit>
+
+
+			<!-- Site Header Middle -->
+			<trans-unit id="siteHeader.showHeaderMiddle">
+				<source>Show Site Header Middle section</source>
+			</trans-unit>
+
+
+			<!-- Main Navigation -->
+
+
+
+			<!-- Accessibility -->
+			<trans-unit id="siteHeader.accessibility.skipLinks_mainNavigation">
+				<source>Accessibility SkipLinks - MainNavigation</source>
+			</trans-unit>
+			<trans-unit id="siteHeader.accessibility.skipLinks_mainContent">
+				<source>Accessibility SkipLinks MainContent</source>
 			</trans-unit>
 
 		</body>
