--- a/Resources/Private/Language/locallang_csh_tt_content.xlf
+++ b/Resources/Private/Language/locallang_csh_tt_content.xlf
@@ -4,6 +4,14 @@
 		<header/>
 		<body>
 
+			<trans-unit id="header_position.description">
+				<source>
+					&lt;strong&gt;Default-Left&lt;/strong&gt; - Aligns the text to the left&lt;br&gt;
+					&lt;strong&gt;Right&lt;/strong&gt; - Aligns the text to the right]&lt;br&gt;
+					&lt;strong&gt;Center&lt;/strong&gt; - Centers the text&lt;br&gt;
+					&lt;strong&gt;Justify&lt;/strong&gt; - Stretches the lines so that each line has equal width
+				</source>
+			</trans-unit>
 
 		</body>
 	</file>
