[TASK] add main navigation settings

--- a/Resources/Private/Language/locallang_BE_CE_special.xlf
+++ b/Resources/Private/Language/locallang_BE_CE_special.xlf
@@ -87,7 +87,30 @@
 
 
 			<!-- Main Navigation -->
-
+			<trans-unit id="siteHeader.mainNavigation">
+				<source>Show Site Main Mavigation section</source>
+			</trans-unit>
+			<trans-unit id="siteHeader.mainNavigation.navHeight">
+				<source>Navigation Height (px)</source>
+			</trans-unit>
+			<trans-unit id="siteHeader.mainNavigation.mobileNavToggleBtn">
+				<source>Mobile Navigation Toggle Btn Position</source>
+			</trans-unit>
+			<trans-unit id="siteHeader.mainNavigation.excludeUidList">
+				<source>Exclude uid list (12,13,...)</source>
+			</trans-unit>
+			<trans-unit id="siteHeader.mainNavigation.dropdown">
+				<source>Main Menu as a dropdown</source>
+			</trans-unit>
+			<trans-unit id="siteHeader.mainNavigation.dropdownColumns">
+				<source>Main Menu Dropdown as Columns (only works if Main Menu as a dropdown)</source>
+			</trans-unit>
+			<trans-unit id="siteHeader.mainNavigation.showThirdNavLevel">
+				<source>Show third navigation level</source>
+			</trans-unit>
+			<trans-unit id="siteHeader.mainNavigation.navbarPos">
+				<source>Alignment of navbar items</source>
+			</trans-unit>
 
 
 			<!-- Accessibility -->
