--- a/Resources/Private/Language/locallang_BE_CE_special.xlf
+++ b/Resources/Private/Language/locallang_BE_CE_special.xlf
@@ -19,6 +19,9 @@
 			<trans-unit id="siteHeader.tabs.settings">
 				<source>Site Header Settings </source>
 			</trans-unit>
+			<trans-unit id="siteHeader.tabs.logo">
+				<source>Site Header Logo</source>
+			</trans-unit>
 
 			<trans-unit id="siteHeader.palette.headerTop">
 				<source>Site Header Top</source>
@@ -104,6 +107,12 @@
 			</trans-unit>
 			<trans-unit id="siteHeader.mainNavigation.dropdownColumns">
 				<source>Main Menu Dropdown as Columns (only works if Main Menu as a dropdown)</source>
+			</trans-unit>
+			<trans-unit id="siteHeader.mainNavigation.enableLogo">
+				<source>Enable Logo in navigation menu</source>
+			</trans-unit>
+			<trans-unit id="siteHeader.mainNavigation.enableLangMenu">
+				<source>Enable Language Menu in navigation menu</source>
 			</trans-unit>
 			<trans-unit id="siteHeader.mainNavigation.showThirdNavLevel">
 				<source>Show third navigation level</source>
