--- a/Resources/Private/Language/locallang_BE_CE_special.xlf
+++ b/Resources/Private/Language/locallang_BE_CE_special.xlf
@@ -73,7 +73,7 @@
 				<source>Phone number title</source>
 			</trans-unit>
 			<trans-unit id="siteHeader.phone_icon">
-				<source>Show Phone icon</source>
+				<source>topShow Phone icon</source>
 			</trans-unit>
 			<trans-unit id="siteHeader.phone_show_title">
 				<source>Show Phone title</source>
@@ -107,13 +107,19 @@
 			</trans-unit>
 
 			<!--SiteFooter Element TCA Overrides-->
+			siteFooter.showFooterMiddle
 			<trans-unit id="siteFooter.CType">
 				<source>Site Footer | (Footer of the site. Will be copied to all subpages)</source>
 			</trans-unit>
 			<trans-unit id="siteFooter.tabs.settings">
 				<source>Site Footer Settings </source>
 			</trans-unit>
-
+			<trans-unit id="siteFooter.showFooterTop">
+				<source>Show footer top part section</source>
+			</trans-unit>
+			<trans-unit id="siteFooter.logo">
+				<source>Logo</source>
+			</trans-unit>
 			<trans-unit id="siteFooter.palette.footerTop">
 				<source>Site Footer Top</source>
 			</trans-unit>
@@ -121,17 +127,24 @@
 			<trans-unit id="siteFooter.palette.footerMiddle">
 				<source>Site Footer Middle</source>
 			</trans-unit>
-			<trans-unit id="siteFooter.palette.middleTextFirst">
+			<trans-unit id="siteFooter.showFooterMiddle">
+				<source>Show footer middle part section</source>
+			</trans-unit>
+			<trans-unit id="siteFooter.middleTextFirst">
 				<source>First text block</source>
 			</trans-unit>
-			<trans-unit id="siteFooter.palette.middleTextSecond">
+			<trans-unit id="siteFooter.middleTextSecond">
 				<source>Second text block</source>
 			</trans-unit>
-			<trans-unit id="siteFooter.palette.middleTextThird">
+			<trans-unit id="siteFooter.middleTextThird">
 				<source>Third text block</source>
 			</trans-unit>
+
 			<trans-unit id="siteFooter.palette.footerBottom">
 				<source>Site Footer Bottom</source>
+			</trans-unit>
+			<trans-unit id="siteFooter.showFooterBottom">
+				<source>Show footer bottom part section</source>
 			</trans-unit>
 		</body>
 	</file>
