[TASK] change styling for quote element, change how bootstrap styling is fetched, changes to quote translation

--- a/Resources/Private/Language/locallang_BE_CE_static.xlf
+++ b/Resources/Private/Language/locallang_BE_CE_static.xlf
@@ -185,7 +185,7 @@
 				<source>Author name</source>
 			</trans-unit>
 			<trans-unit id="quote.cited_work">
-				<source>Title of cited work</source>
+				<source>Work title</source>
 			</trans-unit>
 			<trans-unit id="quote.bodytext">
 				<source>Quote</source>
