--- a/Resources/Private/Language/locallang_BE_CE.xlf
+++ b/Resources/Private/Language/locallang_BE_CE.xlf
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<xliff version='1.2' xmlns='urn:oasis:names:tc:xliff:document:1.2'>
+<?xml version="1.0" encoding="UTF-8"?>
+<xliff version="1.0" xmlns:t3="http://typo3.org/schemas/xliff">
 	<file source-language="en" datatype="plaintext" original="messages" date="2019-04-20UTC12:53:470" product-name="t3kit">
 		<header/>
 		<body>
