--- a/Resources/Private/Language/locallang_BE_CE_special.xlf
+++ b/Resources/Private/Language/locallang_BE_CE_special.xlf
@@ -145,28 +145,50 @@
 			<trans-unit id="siteFooter.palette.footerTop">
 				<source>Site Footer Top</source>
 			</trans-unit>
-
 			<trans-unit id="siteFooter.palette.footerMiddle">
 				<source>Site Footer Middle</source>
 			</trans-unit>
 			<trans-unit id="siteFooter.showFooterMiddle">
 				<source>Show footer middle part section</source>
 			</trans-unit>
-			<trans-unit id="siteFooter.middleTextFirst">
-				<source>First text block</source>
+			<trans-unit id="siteFooter.middleFirstHeader">
+				<source>First column header</source>
 			</trans-unit>
-			<trans-unit id="siteFooter.middleTextSecond">
-				<source>Second text block</source>
+			<trans-unit id="siteFooter.middleFirstLogo">
+				<source>First column logo</source>
 			</trans-unit>
-			<trans-unit id="siteFooter.middleTextThird">
-				<source>Third text block</source>
+			<trans-unit id="siteFooter.middleFirstText">
+				<source>First column text</source>
 			</trans-unit>
-
+			<trans-unit id="siteFooter.middleSecondHeader">
+				<source>Second column header</source>
+			</trans-unit>
+			<trans-unit id="siteFooter.middleSecondLinks">
+				<source>Second column pages links</source>
+			</trans-unit>
+			<trans-unit id="siteFooter.middleThirdHeader">
+				<source>Third column header</source>
+			</trans-unit>
+			<trans-unit id="siteFooter.middleThirdLinks">
+				<source>Third column pages links</source>
+			</trans-unit>
+			<trans-unit id="siteFooter.middleFourthHeader">
+				<source>Fourth column header</source>
+			</trans-unit>
+			<trans-unit id="siteFooter.middleFourthForm'">
+				<source>Fourth column form</source>
+			</trans-unit>
 			<trans-unit id="siteFooter.palette.footerBottom">
 				<source>Site Footer Bottom</source>
 			</trans-unit>
 			<trans-unit id="siteFooter.showFooterBottom">
 				<source>Show footer bottom part section</source>
+			</trans-unit>
+			<trans-unit id="siteFooter.bottomCopyright">
+				<source>Copyright text (notice)</source>
+			</trans-unit>
+			<trans-unit id="siteFooter.bottomLinks">
+				<source>Navigation links</source>
 			</trans-unit>
 		</body>
 	</file>
